Change to use UTF-8 constant from Apache commons